--- a/SQLite with RecyclerView/app/src/main/res/layout/activity_add_task.xml
+++ b/SQLite with RecyclerView/app/src/main/res/layout/activity_add_task.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activitys.AddTaskActivity">
+    tools:context="br.com.flap.listoftask.AddTaskActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="0dp"
