--- a/SQLite with RecyclerView/app/src/main/res/layout/content_main.xml
+++ b/SQLite with RecyclerView/app/src/main/res/layout/content_main.xml
@@ -6,6 +6,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
