--- a/FirebaseApp/app/src/main/res/layout/activity_main.xml
+++ b/FirebaseApp/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imagePhoto"
         android:layout_width="300dp"
         android:layout_height="200dp"
-        android:layout_marginTop="84dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
