--- a/FloatingActionMenu/app/src/main/res/layout/activity_main.xml
+++ b/FloatingActionMenu/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,7 @@
         android:id="@+id/menu"
         android:layout_width="164dp"
         android:layout_height="125dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
+        android:layout_gravity="end|bottom"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
