--- a/FloatingActionMenu/app/src/main/res/layout/activity_main.xml
+++ b/FloatingActionMenu/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,13 @@
             android:src="@drawable/baseline_add_24"
             fab:fab_label="Menu2"
             fab:fab_size="mini" />
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_add_24"
+            fab:fab_label="Menu3"
+            fab:fab_size="mini" />
 
     </com.github.clans.fab.FloatingActionMenu>
 
